Fix layout and element visibilityin login panel

--- a/geoportailv3/static/less/layout.less
+++ b/geoportailv3/static/less/layout.less
@@ -326,7 +326,7 @@ div.ol-zoom-extent > button {
     content:'\e02d';
 }
 
-.account-content > ul li {
+.account-content ul li {
   float: none;
   display: block;
   height: auto;
