--- a/geoportailv3/static/less/theme.less
+++ b/geoportailv3/static/less/theme.less
@@ -54,6 +54,11 @@
     }
   }
 
+  a,
+  .btn-link {
+    color: @secondary;
+  }
+
   .sidebar-controls,
   .toolbox {
     li > a {
@@ -166,13 +171,13 @@
       background-color: @primary;
     }
   }
-  .account-content > ul li a {
+  .account-content ul li a {
     background-color: @tertiary;
     &:hover {
       background-color: @secondary;
     }
   }
-  .account-content > ul li p {
+  .account-content ul li p {
     background-color: @secondary;
   }
   .navbar-default .navbar-nav > .active > a {
